@@ -1365,7 +1365,7 @@ void cxxwtheme()
 	mpcobj<bool>::lock lock{appstate->close_flag};
 	lock.wait([&] { return *lock; });
 
-	main_window->save("main", pos);
+	main_window->save(pos);
 	pos.save(configfile);
 }
 
