@@ -190,7 +190,7 @@ void testbusy()
 		 });
 
 	mythread->run(main_window);
-	main_window->save("main", pos);
+	main_window->save(pos);
 	pos.save(configfile);
 }
 
